# freel00p-colored-logger

./: LICENSE  README.md  pyproject.toml  test_logger.py
.github/workflows/: publish.yml
src/freel00p_colored_logger/: __init__.py  logger.py
